--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=desafio
-server.port=3001
+server.port=3000
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=ber
